Fixed hovering tiles / cell z-index issue + Fine-tuned cells highlighting (better visual indication of move validity)

--- a/style.css
+++ b/style.css
@@ -15,11 +15,105 @@ html, body {
 	position: relative;
 }
 
+#board {
+	position: relative;
+	min-width: 950px;
+    box-sizing: border-box;
+	top: 50px;
+	left: 50px;
+	display: inline-block;
+	padding: 50px;
+	background: #cdc6aa;
+	border: 10px solid #33554f;
+}
+
+#board .inner-wrapper {
+	border-top: 4px solid #f7f0df;
+	border-left: 4px solid #f7f0df;
+	border-bottom: 1px solid #f7f0df;
+	border-right: 1px solid #f7f0df;
+	display: inline-block;
+	box-shadow: 0px 0px 0px 2px #342f29,
+				0px 0px 0px 10px #f7f0df;
+}
+
+#board .inner-wrapper .cell {
+	width: 52px;
+    height: 52px;
+	border-bottom: 3px solid #f7f0df;
+	border-right: 3px solid #f7f0df;
+	float: left;
+	background: #cdc6aa;
+	position: relative;
+}
+
+#board .inner-wrapper .cell .special {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	text-transform: uppercase;
+    line-height: 13px;
+    font-size: 11px;
+    text-align: center;
+    font-weight: bold;
+    padding-top: 6px;
+    box-sizing: border-box;
+    z-index: 1;
+}
+
+#board .inner-wrapper .cell .highlighter {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+    z-index: 2;
+    box-sizing: border-box;
+}
+
+#board .inner-wrapper .cell.highlight .highlighter { /* Show valid tiles when not hovering it */
+	background: rgba(237, 233, 214, 0.5);
+}
+
+#board .inner-wrapper .cell.droppable-over .highlighter,
+#board .inner-wrapper .cell.droppable-over.highlight .highlighter { /* Dragging a tile over a valid cell */
+	background: rgba(216, 237, 214, 0.5);
+    border: 3px solid rgba(80, 204, 79, 0.4);
+}
+
+#board .inner-wrapper .cell.invalid-move .highlighter { /* Dragging a tile over an invalid cell */
+	background: rgba(224, 101, 101, 0.2);
+    border: 3px solid rgba(224, 101, 101, 0.5);
+}
+
+
+#board .inner-wrapper .cell .special.special-3w {
+	background: #fa6850;
+}
+
+#board .inner-wrapper .cell .special.special-2w {
+	background: #fbb9a7;
+}
+
+#board .inner-wrapper .cell .special.special-3l {
+	background: #3e9eb5;
+}
+
+#board .inner-wrapper .cell .special.special-2l {
+	background: #bcd6d2;
+}
+
+#board .inner-wrapper .cell .special.special-start {
+	background: #fbb9a7;
+}
+
 .letter-tile {
 	position: relative;
     text-transform: uppercase;
-    width: 45px;
-    height: 49px;
+    width: 48px;
+    height: 48px;
     margin: 3px;
     display: inline-block;
     background: #e0cc9b;
@@ -40,6 +134,10 @@ html, body {
     -moz-user-select: none; 
     -ms-user-select: none; 
     user-select: none; 
+}
+
+.letter-tile[data-dragging="1"] {
+	z-index: 5;
 }
 
 .letter-tile.current-turn-letter-tile {
@@ -65,90 +163,11 @@ html, body {
     right: 7px;
 }
 
-#board {
-	position: relative;
-	min-width: 935px;
-    box-sizing: border-box;
-	top: 50px;
-	left: 50px;
-	display: inline-block;
-	padding: 50px;
-	background: #cdc6aa;
-	border: 10px solid #33554f;
-}
-
-#board .inner-wrapper {
-	border-top: 4px solid #f7f0df;
-	border-left: 4px solid #f7f0df;
-	border-bottom: 1px solid #f7f0df;
-	border-right: 1px solid #f7f0df;
-	display: inline-block;
-	box-shadow: 0px 0px 0px 2px #342f29,
-				0px 0px 0px 10px #f7f0df;
-}
-
-#board .inner-wrapper .cell {
-	width: 51px;
-    height: 52px;
-	border-bottom: 3px solid #f7f0df;
-	border-right: 3px solid #f7f0df;
-	float: left;
-	background: #cdc6aa;
-	position: relative;
-}
-
-#board .inner-wrapper .cell.highlight,
-#board .inner-wrapper .cell.droppable-over {
-	background: #e0dbc5;
-}
-
-#board .inner-wrapper .cell.droppable-over.highlight {
-	background: #ede9d6;
-}
-
-#board .inner-wrapper .cell.invalid-move {
-	background: #dcc2b9;
-}
-
-#board .inner-wrapper .cell .special {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	text-transform: uppercase;
-    line-height: 13px;
-    font-size: 11px;
-    text-align: center;
-    font-weight: bold;
-    padding-top: 6px;
-    box-sizing: border-box;
-}
-
-#board .inner-wrapper .cell .special.special-3w {
-	background: #fa6850;
-}
-
-#board .inner-wrapper .cell .special.special-2w {
-	background: #fbb9a7;
-}
-
-#board .inner-wrapper .cell .special.special-3l {
-	background: #3e9eb5;
-}
-
-#board .inner-wrapper .cell .special.special-2l {
-	background: #bcd6d2;
-}
-
-#board .inner-wrapper .cell .special.special-start {
-	background: #fbb9a7;
-}
-
 #board .inner-wrapper .cell .letter-tile {
 	margin: auto;
 	top: -7px;
 	display: block;
+	z-index: 2;
 }
 
 #info-pane {
@@ -156,9 +175,10 @@ html, body {
 	top: 0;
 	right: 0;
 	height: 100%;
-	width: 400px;
+	width: 420px;
 	background: #f7f0df;
 	border-left: 4px solid #cdc6aa;
+	z-index: 2;
 }
 
 #info-pane .info-block {
